# yarat-lang

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
examples/: Cargo.toml  finance_audit.yt  transfer.yt
frontend/: index.html
src/: main.rs  server.rs
src/codegen/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/semantic/: mod.rs  symbol_table.rs
src/vm/: mod.rs
