[package]
name = "yarat-lang"
version = "0.1.0"
edition = "2021"
description = "A domain-specific programming language for modern finance."
authors = ["Mayega Felix Onkangi"]

[dependencies]
# We are building from scratch for maximum security. 

# Your existing dependencies (if any) go here

actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# THE ENTERPRISE UPGRADES:
actix-cors = "0.6"       # Network Security (Cross-Origin Resource Sharing)
env_logger = "0.10"      # Telemetry and Server Logging
log = "0.4"              # Standard logging facade
